# AI-Powered-AML-Detection-System-VAE-GNN-Streamlit

./: .gitignore  Makefile  README.md  SETUP.md  config.toml  generate_data.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  anomaly_detector.py  gan_trainer.py  network_investigator.py  orchestrator_agent.py  report_writer.py
airflow/: __init__.py  init.py
airflow/dags/: __init__.py  aml_pipeline_dag.py  aml_pipelines_dag.py  init.py
api/: __init__.py  main.py
causal/: __init__.py  causal_inference.py  init.py
dashboard/: __init__.py  app.py
data/: .gitkeep  __init__.py  duckdb_queries.py  init.py
deployment/: Dockerfile  __init__.py  docker-compose.yml  k8s_deployment.yaml
explainability/: __init__.py  shap_explainer.py
features/: __init__.py  feature_engineering.py
gnn/: __init__.py  graph_builder.py  train_gnn.py
llm/: __init__.py  ollama_writer.py  sar_llm_writer.py
models/: __init__.py  gan.py  gan_meta.json  gnn.py  vae.py
notebooks/: 01_eda.py  02_vae_training_analysis.py  03_gnn_analysis.py  04_orchestrator_demo.py  05_causal_analysis.py
pipeline/: __init__.py  orchestrator.py
reports/: __init__.py  confusion_matrix.py  customer_risk_scores.parquet  shap_values.parquet  vae_alerts.parquet
tests/: conftest.py  test_api.py  test_causal.py  test_features.py  test_gan.py  test_gnn.py  test_metrics.py  test_orchestrator.py  test_vae.py
utils/: __init__.py  io_utils.py  logger.py  metrics.py
