[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aml-detection"
version = "1.0.0"
description = "AI-Powered AML Detection System (VAE + GNN + Streamlit)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AML Team" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "dashboard*", "features*", "gnn*", "llm*",
           "models*", "pipeline*", "reports*", "utils*", "explainability*"]

# ── pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=. --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

# ── ruff (linter) ────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N803", "N806"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

# ── black (formatter) ────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311"]

# ── mypy (type checker) ──────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

# ── coverage ─────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = ["tests/*", "notebooks/*", "venv/*", ".venv/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
